{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "74fe7b98-108b-4dbe-91ec-6cb6064cb576",
            "actions": [
                {
                    "name": "RightLeft",
                    "type": "Button",
                    "id": "4467d5c0-63e8-4235-bf36-02187fa06ef8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UpDown",
                    "type": "Button",
                    "id": "927635fd-6894-48d4-9f5c-33b595de9ed9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5fc99943-afdd-4d37-9991-c61dd84ee6e0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Value",
                    "id": "83d4e573-7164-4cd2-add5-020e75d12cc1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CameraSwitch",
                    "type": "PassThrough",
                    "id": "23a4bc81-25a2-4cd4-9245-61ffbecc38ce",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "d812385a-d5ee-4f8e-9999-98f5db3696b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "7b767429-1050-4318-81dd-acadd7a6980a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cb588041-0408-415f-ab2a-19438f6e3ed2",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f46ee8c6-0dc3-4bf0-9150-079fd25ccac7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightLeft",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "a1e74e48-927e-43f3-a43a-a5acf3d8343e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "07f30df3-4e45-4ea2-b2aa-82b1f3933e50",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "bf0bd173-c0bf-4361-a2da-5bfdafd3392a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpDown",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f3c83b0f-ab45-460e-aaea-e71d6faa92ba",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c3b74f5-42ad-48fd-b676-9e59ee1e8c2b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "00be3120-0f7c-461e-8d52-3a57631367c5",
                    "path": "<Keyboard>/v",
                    "interactions": "MultiTap(tapCount=1)",
                    "processors": "",
                    "groups": "",
                    "action": "CameraSwitch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25189463-4f3b-4c18-bbb1-5c02a95a8da9",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}